--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,7 @@ h1.hero-title {
   padding-top: 45px;
 }
 
+/* Course Goals Styles */
 .course-goals {
   padding-top: 100px;
   padding-left: 55px;
