master - border red

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+* {
+  border: 1px solid red;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
 }
@@ -9,15 +13,9 @@ header {
   background-repeat: no-repeat;
 }
 
-/* Logo Styles */
 .logo {
-<<<<<<< HEAD
   width: 157px;
   height: 100px;
-=======
-  height: 100px;
-  width: 157px;
->>>>>>> origin/gh-pages
   background-image: url('http://jeremyabrahams.github.io/mw-project-1/img/factory-logo.png');
   background-repeat: no-repeat;
   text-indent: 150%;
@@ -27,24 +25,15 @@ header {
 /*  border: solid;*/
 }
 
-/* Navigation Styles */
 ul.nav {
-<<<<<<< HEAD
 list-style-type: none;
 position: absolute;
 top: 0;
 right: 0;
-=======
-position: absolute;
-top: 0;
-right: 0;
-list-style-type: none;
->>>>>>> origin/gh-pages
 }
 
 .nav li {
   display: inline-block;
-<<<<<<< HEAD
   font-size: 18px;
   margin: 28px;
   margin-right: 35px;
@@ -52,30 +41,14 @@ list-style-type: none;
 }
 
 a.nav-links {
-=======
-  margin: 28px;
-  margin-right: 35px;
-  margin-top: 35px;
-  font-size: 18px;
-}
-
-a.nav-links {
-  position: relative;
->>>>>>> origin/gh-pages
   text-decoration: none;
   color: white;
   font-weight: 500;
   line-height: 21px;
   text-transform: uppercase;
-<<<<<<< HEAD
   position: relative;
 }
 
-=======
-}
-
-/* Hero Styles */
->>>>>>> origin/gh-pages
 .hero-intro{
   padding-top: 70px;
 }
@@ -95,10 +68,6 @@ h1.hero-title {
   text-align: center;
 }
 
-<<<<<<< HEAD
-=======
-/* Intro Styles */
->>>>>>> origin/gh-pages
 .intro {
   color: #C3BFBF;
   font-size: 32px;
@@ -114,7 +83,6 @@ h1.hero-title {
   padding-top: 45px;
 }
 
-/* Course Goals Styles */
 .course-goals {
   padding-top: 100px;
   padding-left: 55px;
@@ -162,16 +130,9 @@ h2.goals-sub {
   clear: left;
 }
 
-<<<<<<< HEAD
 .co-learning {
   border: solid;
   clear: both;
-=======
-/* Co-Learners Styles */
-.co-learning {
-  clear: both;
-  border: solid;
->>>>>>> origin/gh-pages
 }
 
 h1.co-learners-title {
@@ -258,10 +219,6 @@ h1.course-details{
   overflow: hidden;
 }
 
-<<<<<<< HEAD
-=======
-/* Instructor Styles */
->>>>>>> origin/gh-pages
 .instructor-wrap {
   border: 1px solid red;
   position: relative;
@@ -314,10 +271,6 @@ p.instructor-bio {
   margin-top: 40px;
 }
 
-<<<<<<< HEAD
-=======
-/* Quote Styles */
->>>>>>> origin/gh-pages
 .quote {
   height: 300px;
   text-align: center;
@@ -352,10 +305,6 @@ a.quote-link {
   font-weight: 300;
 }
 
-<<<<<<< HEAD
-=======
-/* Details Styles */
->>>>>>> origin/gh-pages
 .details{
     background-color: #e66244;
 }
@@ -375,10 +324,6 @@ a.quote-link {
   padding: 10px 40px;
 }
 
-<<<<<<< HEAD
-=======
-/* Footer Styles */
->>>>>>> origin/gh-pages
 .footer-logo{
   text-align: left;
 }
