--- a/styles.css
+++ b/styles.css
@@ -137,18 +137,18 @@ h2.goals-sub {
 }
 
 h1.co-learners-title {
-  color: #444444;
-  font-weight: 500;
   font-size: 28px;
+  font-weight: 500;
   line-height: 32px;
   text-transform: uppercase;
   text-align: center;
+  color: #444444;
 }
 
 .name {
-  color: #444444;
-  font-weight: 500;
   font-size: 22px;
+  font-weight: 500;
+  color: #444444;
 }
 
 .co-learners {
@@ -176,35 +176,35 @@ h1.co-learners-title {
 }
 
 .social-links {
-  text-align: center;
   padding: 0px;
+  text-align: center;
 }
 
 .social-links li {
-  margin: 1px;
   display: inline-block;
+  margin: 1px;
 }
 
 .facebook {
+  display: block;
   width: 20px;
   height: 20px;
+  text-indent: 150%;
   background-image: url('http://jeremyabrahams.github.io/mw-project-1/img/slice.png');
   background-repeat: no-repeat;
   background-position: -35px;
-  display: block;
-  text-indent: 150%;
   white-space: nowrap;
   overflow: hidden;
 }
 
 .twitter {
+  display: block;
   width: 20px;
   height: 20px;
+  text-indent: 150%;
   background-image: url('http://jeremyabrahams.github.io/mw-project-1/img/slice.png');
   background-repeat: no-repeat;
   background-position: 1px;
-  display: block;
-  text-indent: 150%;
   white-space: nowrap;
   overflow: hidden;
 }
@@ -223,90 +223,90 @@ h1.course-details{
 
 /*instructor styles*/
 .instructor-wrap {
-  border: 1px solid red;
   position: relative;
+  /*border: 1px solid red;*/
   clear: both;
 }
 
 .instructor-bg {
+  background-position: relative;
   width: 100%;
   height: 100%;
   background-image: url('http://jeremyabrahams.github.io/mw-project-1/img/instructor.jpg');
   background-repeat: no-repeat;
   /* background-size: 100%; */
-  background-position: relative;
 }
 
 .instructor-info {
-  z-index: 100;
   position: absolute;
+  z-index: 100;
   top: 100px;
   left: 50px;
   width: 40%;
-  color: white;
   float: left;
+  color: white;
 }
 
 h1.instructor {
-  text-align: left;
   font-size: 18px;
   font-weight: 300;
   text-transform: uppercase;
+  text-align: left;
 }
 
 h2.instructor-name{
+  margin-top: 10px;
   font-size: 36px;
   font-weight: 500;
   text-transform: uppercase;
-  margin-top: 10px;
 }
 
 p.instructor-company {
+  margin-top: -25px;
   font-size: 22px;
   font-weight: 500;
-  margin-top: -25px;
 }
 
 p.instructor-bio {
+  margin-top: 40px;
   font-size: 20px;
   font-weight: 300;
   line-height: 28px;
-  margin-top: 40px;
 }
 
 /*quote styles*/
 .quote {
-  height: 300px;
-  text-align: center;
+  margin: auto;
   padding-top: 50px;
   width: 900px;
-  margin: auto;
+  height: 300px;
+  text-align: center;
   border: solid 2px;
 }
 
 .quote-text {
+  font-size: 48px;
   font-weight: 300;
   font-style: italic;
-  font-size: 48px;
   color: #e66244;
 }
 
 .quote-name {
-  color: #AAAAAA;
   font-size: 22px;
   font-weight: 300;
+  color: #AAAAAA;
 }
 
 .quote-title {
-  color: AAAAAA;
   font-size: 16px;
   font-weight: 300;
+  color: #AAAAAA;
 }
 
 a.quote-link {
-  color: #AAAAAA;
   font-size: 16px;
   font-weight: 300;
+  color: #AAAAAA;
 }
 
 /*footer detail styles*/
@@ -315,18 +315,18 @@ a.quote-link {
 }
 
 .details-list{
-  list-style: none;
-  color: white;
-  font-family: sans-serif;
   padding-top: 145px;
+  list-style: none;
+  font-family: sans-serif;
+  color: white;
 }
 
 .sign-up-button{
+  padding: 10px 40px;
   border: 2px solid;
   color: white;
   text-transform: uppercase;
   background-color: transparent;
-  padding: 10px 40px;
 }
 
 /*footer styles*/
