add $red in sass

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/*colors*/
 body {
   font-family: 'Roboto', sans-serif; }
 
@@ -269,7 +270,7 @@ a.quote-link {
 
 /*footer detail styles*/
 .details {
-  background-color: #e66244; }
+  background-color: #ff3300; }
 
 .details-list {
   padding-top: 145px;
