update $red hex

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -270,7 +270,7 @@ a.quote-link {
 
 /*footer detail styles*/
 .details {
-  background-color: #ff3300; }
+  background-color: #e66244; }
 
 .details-list {
   padding-top: 145px;
