--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,8 @@
 /*colors*/
 $red: #e66244;
+$gray-light: #C3BFBF;
+$gray-mid: #777777;
+$gray-dark: #444444;
 
 
 body {
@@ -79,7 +82,7 @@ h1.hero-title {
   font-weight: 300;
   line-height: 56px;
   text-align: center;
-  color: #C3BFBF;
+  color: $gray-light;
 }
 
 #divider{
@@ -99,7 +102,7 @@ h1.course-goals-title {
   line-height: 32px;
   text-align: center;
   text-transform: uppercase;
-  color: #777777;
+  color: $gray-mid;
 }
 
 h2.goals-sub {
@@ -107,7 +110,7 @@ h2.goals-sub {
   font-weight: 500;
   line-height: 18px;
   text-transform: uppercase;
-  color: #777777;
+  color: $gray-mid;
 }
 
 .course-goals-list {
@@ -116,7 +119,7 @@ h2.goals-sub {
   font-weight: 300;
   line-height: 26px;
   list-style-type: none;
-  color: #777777;
+  color: $gray-mid;
 }
 
 .course-goals-list:nth-child(3) {
@@ -146,13 +149,13 @@ h1.co-learners-title {
   line-height: 32px;
   text-transform: uppercase;
   text-align: center;
-  color: #444444;
+  color: $gray-dark;
 }
 
 .name {
   font-size: 22px;
   font-weight: 500;
-  color: #444444;
+  color: $gray-dark;
 }
 
 .co-learners {
@@ -292,7 +295,7 @@ p.instructor-bio {
   font-size: 48px;
   font-weight: 300;
   font-style: italic;
-  color: #e66244;
+  color: $red;
 }
 
 .quote-name {
