--- a/scss/style.scss
+++ b/scss/style.scss
@@ -318,7 +318,7 @@ a.quote-link {
 
 /*footer detail styles*/
 .details{
-    background-color: $red;
+    background-color: darken($red, 10%);;
 }
 
 .details-list{
