lighten red test

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -270,7 +270,7 @@ a.quote-link {
 
 /*footer detail styles*/
 .details {
-  background-color: #da401d; }
+  background-color: white; }
 
 .details-list {
   padding-top: 145px;
