--- a/scss/style.scss
+++ b/scss/style.scss
@@ -318,7 +318,7 @@ a.quote-link {
 
 /*footer detail styles*/
 .details{
-    background-color: lighten($red, 80%);;
+    background-color: lighten($red, 80%);
 }
 
 .details-list{
