change header from 640 to 100%

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body {
   clear: both; }
 
 header {
-  height: 640px;
+  height: 100%;
   width: 100%;
   background-image: url("http://jeremyabrahams.github.io/mw-project-1/img/footer.jpg");
   background-repeat: no-repeat; }
