--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body {
   clear: both; }
 
 header {
-  height: 100%;
+  height: 640px;
   width: 100%;
   background-image: url("http://jeremyabrahams.github.io/mw-project-1/img/footer.jpg");
   background-repeat: no-repeat; }
@@ -83,7 +83,7 @@ h1.hero-title {
   padding-left: 55px;
   border: solid; }
 
-h1.course-goals-title {
+h1 {
   font-size: 28px;
   font-weight: 500;
   line-height: 32px;
@@ -91,7 +91,7 @@ h1.course-goals-title {
   text-transform: uppercase;
   color: #777777; }
 
-h2.goals-sub {
+h2 {
   font-size: 16px;
   font-weight: 500;
   line-height: 18px;
