--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,7 +15,7 @@ body {
 }
 
 header {
-  height: 100%;
+  height: 640px;
   width: 100%;
   background-image: url('http://jeremyabrahams.github.io/mw-project-1/img/footer.jpg');
   background-repeat: no-repeat;
@@ -101,7 +101,7 @@ h1.hero-title {
   border: solid;
 }
 
-h1.course-goals-title {
+h1 {
   font-size: 28px;
   font-weight: 500;
   line-height: 32px;
@@ -110,7 +110,7 @@ h1.course-goals-title {
   color: $gray-mid;
 }
 
-h2.goals-sub {
+h2 {
   font-size: 16px;
   font-weight: 500;
   line-height: 18px;
