--- a/scss/style.scss
+++ b/scss/style.scss
@@ -101,7 +101,7 @@ h1.hero-title {
   border: solid;
 }
 
-h1 {
+h1.course-goals-title {
   font-size: 28px;
   font-weight: 500;
   line-height: 32px;
@@ -110,7 +110,7 @@ h1 {
   color: $gray-mid;
 }
 
-h2 {
+h2.goals-sub {
   font-size: 16px;
   font-weight: 500;
   line-height: 18px;
