--- a/scss/style.scss
+++ b/scss/style.scss
@@ -327,14 +327,14 @@ a.quote-link {
 }
 
 .details-list {
-  list-style: none;
   padding-top: 141px;
-  color: #fff;
   margin-left: 92px;
   margin-bottom: 200px;
+  list-style: none;
   font-size: 36px;
-  line-height: 38px;
   font-weight: 300;
+  color: #ffffff;
+  line-height: 38px;
 }
 
 .class-size {
