--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -278,14 +278,14 @@ a.quote-link {
   background-color: #e66244; }
 
 .details-list {
-  list-style: none;
   padding-top: 141px;
-  color: #fff;
   margin-left: 92px;
   margin-bottom: 200px;
+  list-style: none;
   font-size: 36px;
-  line-height: 38px;
-  font-weight: 300; }
+  font-weight: 300;
+  color: #ffffff;
+  line-height: 38px; }
 
 .class-size {
   margin-top: 40px;
