--- a/scss/style.scss
+++ b/scss/style.scss
@@ -287,38 +287,47 @@ p.instructor-bio {
 }
 
 /*quote styles*/
-.quote {
-  margin: auto;
-  padding-top: 50px;
-  width: 900px;
-  height: 300px;
-  text-align: center;
-  border: solid 2px;
+/**BLOCK QUOTE**/
+
+.blockquote {
+  width: 903px;
+  margin-right: auto;
+  margin-left: auto;
+  display: block;
+  font-family: roboto, tahoma, arial;
 }
 
-.quote-text {
+.quote {
+  margin-top: 170px;
+  color: #E66244;
+  text-align: center;
   font-size: 48px;
+  line-height: 64px;
   font-weight: 300;
   font-style: italic;
-  color: $red;
 }
 
-.quote-name {
+.quoted {
+  margin-top: 74px;
+  display: block;
+  text-align: center;
+  color: #AAA;
   font-size: 22px;
-  font-weight: 300;
-  color: #AAAAAA;
+  line-height: 25px;
+  font-weight: 500;
 }
 
-.quote-title {
+.quoted-details {
+  display: block;
   font-size: 16px;
-  font-weight: 300;
-  color: #AAAAAA;
+  line-height: 24px;
+  font-weight: 500;
 }
 
-a.quote-link {
-  font-size: 16px;
-  font-weight: 300;
-  color: #AAAAAA;
+.quoted-details-link {
+  display: block;
+  color: #AAA;
+  margin-bottom: 111px;
 }
 
 /*footer detail styles*/
