--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -244,7 +244,6 @@ p.instructor-bio {
   line-height: 28px; }
 
 /*quote styles*/
-/**BLOCK QUOTE**/
 .blockquote {
   width: 903px;
   margin-right: auto;
@@ -300,9 +299,13 @@ p.instructor-bio {
   margin-bottom: 40px; }
 
 .sign-up-button {
-  padding: 10px 40px;
-  border: 2px solid;
-  color: white;
+  margin-right: 90px;
+  width: 327px;
+  height: 98px;
+  float: right;
+  font-size: 30px;
+  border: 4px solid;
+  color: #ffffff;
   text-transform: uppercase;
   background-color: transparent; }
 
