--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,15 +8,15 @@ body {
   clear: both; }
 
 header {
-  height: 640px;
   width: 100%;
+  height: 640px;
   background-image: url("http://jeremyabrahams.github.io/mw-project-1/img/footer.jpg");
   background-repeat: no-repeat; }
 
 .logo {
+  width: 157px;
   margin-left: 34px;
   height: 100px;
-  width: 157px;
   text-indent: 150%;
   white-space: nowrap;
   overflow: hidden;
@@ -118,7 +118,7 @@ h2.goals-sub {
   clear: left; }
 
 /*co-learning styles*/
-.co-learning {
+.co-learners {
   clear: both;
   border: solid;
   background-color: #fafafa; }
