--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,16 +15,16 @@ body {
 }
 
 header {
-  height: 640px;
   width: 100%;
+  height: 640px;
   background-image: url('http://jeremyabrahams.github.io/mw-project-1/img/footer.jpg');
   background-repeat: no-repeat;
 }
 
 .logo {
+  width: 157px;
   margin-left: 34px;
   height: 100px;
-  width: 157px;
   text-indent: 150%;
   white-space: nowrap;
   overflow: hidden;
@@ -142,7 +142,7 @@ h2.goals-sub {
 }
 
 /*co-learning styles*/
-.co-learning {
+.co-learners {
   clear: both;
   border: solid;
   background-color: #fafafa;
