--- a/scss/style.scss
+++ b/scss/style.scss
@@ -331,7 +331,7 @@ p.instructor-bio {
 
 /*footer detail styles*/
 .details{
-    background-color: $red;
+    // background-color: $red;
     background-image: url('http://jeremyabrahams.github.io/mw-project-1/img/footer.jpg');
 }
 
