--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,7 +9,7 @@ body {
 }
 
 .header-wrap{
-  border: 1px solid red;
+  // border: 1px solid red;
   position: relative;
   clear: both;
 }
@@ -144,7 +144,7 @@ h2.goals-sub {
 /*co-learning styles*/
 .co-learners {
   clear: both;
-  // border: solid;
+  border: solid;
   background-color: #fafafa;
 }
 
