--- a/scss/style.scss
+++ b/scss/style.scss
@@ -59,14 +59,14 @@ a.nav-links {
 
 /*hero styles*/
 .hero-intro{
-  padding-top: 170px;
+  padding-top: 70px;
 }
 
 h1.hero-title {
   font-size: 92px;
   font-weight: 100;
   text-align: center;
-  color: #FFFFFF;
+  color: #red;
 }
 
 .hero-sub {
