--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,7 @@ h1.hero-title {
   font-size: 92px;
   font-weight: 100;
   text-align: center;
-  color: #red; }
+  color: #FFFFFF; }
 
 .hero-sub {
   font-size: 24px;
@@ -281,7 +281,8 @@ p.instructor-bio {
 
 /*footer detail styles*/
 .details {
-  background-image: url("http://jeremyabrahams.github.io/mw-project-1/img/footer.jpg"); }
+  background-image: url("http://jeremyabrahams.github.io/mw-project-1/img/footer.jpg");
+  background-repeat: no-repeat; }
 
 .details-list {
   padding-top: 141px;
