--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -281,6 +281,8 @@ p.instructor-bio {
 
 /*footer detail styles*/
 .details {
+  width: 100%;
+  height: 672px;
   background-image: url("http://jeremyabrahams.github.io/mw-project-1/img/footer.jpg");
   background-repeat: no-repeat; }
 
