--- a/scss/style.scss
+++ b/scss/style.scss
@@ -331,6 +331,8 @@ p.instructor-bio {
 /*footer detail styles*/
 .details{
     // background-color: $red;
+    width: 100%;
+    height: 672px;
     background-image: url('http://jeremyabrahams.github.io/mw-project-1/img/footer.jpg');
     background-repeat: no-repeat;
 }
