--- a/scss/style.scss
+++ b/scss/style.scss
@@ -143,7 +143,7 @@ h2.goals-sub {
 /*co-learning styles*/
 .co-learners {
   clear: both;
-  border: solid;
+  border: red, 1px;
   background-color: #fafafa;
 }
 
