--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,6 +120,7 @@ h2.goals-sub {
 .co-learners {
   clear: both;
   border: solid red;
+  border-width: 1px;
   background-color: #fafafa; }
 
 h1.co-learners-title {
