--- a/scss/style.scss
+++ b/scss/style.scss
@@ -376,7 +376,8 @@ p.instructor-bio {
 }
 
 .footer-logo{
-  position: relative;
-  z-index: 100;
+  text-indent: 150%;
+  white-space: nowrap;
+  overflow: hidden;
   text-align: left;
 }
