logo width/height

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,8 +22,8 @@ header {
 
 .logo {
   width: 157px;
-  margin-left: 34px;
   height: 100px;
+  margin-left: 34px;
   text-indent: 150%;
   white-space: nowrap;
   overflow: hidden;
@@ -376,6 +376,9 @@ p.instructor-bio {
 }
 
 .footer-logo{
+  width: 100px;
+  height: 64px;
+  margin-left: 34px;
   text-indent: 150%;
   white-space: nowrap;
   overflow: hidden;
