--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,8 +14,8 @@ header {
 
 .logo {
   width: 157px;
-  margin-left: 34px;
   height: 100px;
+  margin-left: 34px;
   text-indent: 150%;
   white-space: nowrap;
   overflow: hidden;
@@ -321,6 +321,9 @@ p.instructor-bio {
   clear: both; }
 
 .footer-logo {
+  width: 100px;
+  height: 64px;
+  margin-left: 34px;
   text-indent: 150%;
   white-space: nowrap;
   overflow: hidden;
