--- a/scss/style.scss
+++ b/scss/style.scss
@@ -375,7 +375,7 @@ p.instructor-bio {
   clear: both;
 }
 
-.footer-logo{
+.footer-logo {
   width: 100px;
   height: 64px;
   margin-left: 34px;
@@ -383,4 +383,5 @@ p.instructor-bio {
   white-space: nowrap;
   overflow: hidden;
   text-align: left;
+  background-color: red;
 }
