footer logo text

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -379,9 +379,7 @@ p.instructor-bio {
   width: 100px;
   height: 64px;
   margin-left: 34px;
-  text-indent: 150%;
-  white-space: nowrap;
   overflow: hidden;
   text-align: left;
-  background-color: red;
+  background-color: #e6e6e6;
 }
