--- a/scss/style.scss
+++ b/scss/style.scss
@@ -370,6 +370,7 @@ p.instructor-bio {
 
 /*footer styles*/
 .footer {
+  background-color: red;
   position: relative;
   z-index: 100;
   clear: both;
