--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,6 +141,7 @@ h1.co-learners-title {
   text-align: center; }
 
 .co-learners > li {
+  clear: both;
   float: left;
   width: 20%;
   height: 300px;
